# Touchbar-API

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: multi-platform.yml
src/: objcBridge.hpp
src/Cpp/: Hooks.cpp  TouchbarNode.cpp  TouchbarNode.hpp  objcBridge.cpp
src/ObjC/: TouchBarCustomView.h  TouchBarCustomView.mm  TouchBarDelegate.h  TouchBarDelegate.mm  objcBridge.mm
src/Touch/: Events.cpp  Hooks.cpp  TBTouchDispatcher.cpp  TBTouchDispatcher.hpp
