cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if ("${CMAKE_SYSTEM_NAME}" STREQUAL "iOS" OR IOS)
    set(CMAKE_OSX_ARCHITECTURES "arm64")
else()
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)

project(TouchbarAPI VERSION 1.0.0)

set(SOURCES
    src/Touch/TBTouchDispatcher.cpp
    src/Touch/Hooks.cpp
    src/Touch/Events.cpp

    src/ObjC/TouchBarCustomView.mm
    src/ObjC/TouchBarDelegate.mm
    src/ObjC/objcBridge.mm

    src/Cpp/TouchbarNode.cpp
    src/Cpp/Hooks.cpp
    src/Cpp/objcBridge.cpp
)

set_source_files_properties(
    src/ObjC/TouchBarCustomView.mm
    src/ObjC/TouchBarDelegate.mm
    src/ObjC/objcBridge.mm
    
    PROPERTIES SKIP_PRECOMPILE_HEADERS ON
)

add_library(${PROJECT_NAME} SHARED ${SOURCES})

if (NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
else()
    message(STATUS "Found Geode: $ENV{GEODE_SDK}")
endif()

add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)

setup_geode_mod(${PROJECT_NAME})
